results/SVCOMP/2-shot/log-array_iteration01-2024_03_18_22_44_02.txt
public class array_iteration01 {

    //@ requires 0 <= index && index < 200;
    //@ ensures \result == 0 ==> (\exists int i; 0 <= i && i < 200; ia[i] == 0);
    //@ ensures \result == 1 ==> (\forall int i; 0 <= i && i < 200; ia[i] != 0);
    public static int f(int index) {
        int[] ia = new int[200];
        if (0 > index || index >= ia.length) return -1;
        ia[index] = Verifier.nondetInt();
        for (int i = 0; i < ia.length; i++) {
            if (ia[i] == 0)
                return 0;
        }
        return 1;
    }
}
/home/max/Documents/JMLGPT/tmp/array_iteration01.java:4: error: cannot find symbol
    //@ ensures \result == 0 ==> (\exists int i; 0 <= i && i < 200; ia[i] == 0);
                                                                    ^
  symbol:   variable ia
  location: class array_iteration01
/home/max/Documents/JMLGPT/tmp/array_iteration01.java:5: error: cannot find symbol
    //@ ensures \result == 1 ==> (\forall int i; 0 <= i && i < 200; ia[i] != 0);
                                                                    ^
  symbol:   variable ia
  location: class array_iteration01
/home/max/Documents/JMLGPT/tmp/array_iteration01.java:9: error: cannot find symbol
        ia[index] = Verifier.nondetInt();
                    ^
  symbol:   variable Verifier
  location: class array_iteration01
3 errors

